refactor(powerline): 重构线路风格系统实现垂度与样式覆盖
- 将垂度相关字段从 PowerLineFootprint 移至 StyleState 统一管理
- 移除 PowerLineFootprint 中的 sagRatio 和 maxSagDepth 字段
- 添加 DEFAULT_SAG_RATIO 常量到